	(CygbuildDefineGlobalMain): New SCRIPT_CLEAN_CYGFILE.
	(CygbuildCmdCleanMain): Add support for external clean.sh
	(CygbuildCmdDeleteList): New.
	(CygbuildInstallPackageDocs): Remove quoted from
	$CYGBUILD_INSTALL_IGNORE to pass args in $@.
	(CygbuildBootVariablesGlobalMain): Add backslashes to
	CYGBUILD_INSTALL_IGNORE to not use newlines.

2013-02-01 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdCleanBasic): New.
	(CygbuildCmdCleanMain): If no Makefile, call CygbuildCmdCleanBasic().
	(CygbuildInstallFixManSymlinks): Correct variable name from
	dir to mandir.

2012-12-11 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Remove variable
	$dir and use $instdir. Check that $instdir exists. Remove extra
	call to CygbuildPopd() in scriptAfter case.

2012-11-24 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallCygwinPartMain): change
	package-version.README to package.README.

2012-11-01 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCommandMainCheckSpecial): Add alias
	'fetch' for cygport source download compatibility. Add alias
	'deps' for cygport compatibility.
	(CygbuildCmdDependMain): Change from cygcheck to objdmp.

2012-10-31 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh
	(top level): Improve all <cd $dir> commands to read <cd "$dir">.
	(CygbuildCygcheckLibraryDepMain): Adjust comments.
	(CygbuildPreRemoveWrite): Adjust message.
	(CygbuildPatchApplyQuiltMaybe): Add color support. Disable in Emacs
	M-x shell.

2012-10-25 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildBootVariablesGlobalMain): Add
	.sgignores to CYGBUILD_DIFF_OPTIONS.
	(CygbuildIsCmakePackage): New.
	(CygbuildCmdBuildStdMakefile): Add CMake support.
	(CygbuildCmdConfMain): Add CMake support.
	(CygbuildConfCmakeMain): New.

2012-10-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdPkgDevelStandardAbiVersion): New.